--- a/src/main/resources/templates/dailyMenu/addProductToDailyMenu.html
+++ b/src/main/resources/templates/dailyMenu/addProductToDailyMenu.html
@@ -16,5 +16,18 @@
         <input type="submit" value="Поиск"/>
     </form>
 </div>
+<br>
+<div th:each="product: ${products}">
+    <form th:method="post" th:object="${product}" th:action="@{/daily-menus/{id}/products (id=${dailyMenu.id})}">
+        <input type="hidden" th:value="*{id}" name="id"> </input>
+        <input th:value="*{name}" name="name" readonly="readonly"> </input>
+        <input th:value="*{nominalCalories}" name="calories" readonly="readonly"> </input>
+        <input th:value="*{protein}" name="protein" readonly="readonly"> </input>
+        <input th:value="*{fat}" name="fat" readonly="readonly"> </input>
+        <input th:value="*{carbonhydrates}" name="carbonhydrates" readonly="readonly"> </input>
+        <input th:value="*{weight}" name="weight" required="required"> </input>
+        <button class="submit-button" type="submit">+</button>
+    </form>
+</div>
 </body>
 </html>
