--- a/src/main/resources/templates/dailyMenu/getDailyMenu.html
+++ b/src/main/resources/templates/dailyMenu/getDailyMenu.html
@@ -110,7 +110,7 @@
         <td colspan="5">
             <label>Завтрак</label>
             <div class="inputButton">
-                <form th:action="@{/add}"  method="get">
+                <form th:action="@{/add}" method="get" >
                     <button th:name="eating" th:value="BREAKFAST" style="float: right;">Добавить продукт </button>
                 </form>
             </div>
@@ -123,9 +123,9 @@
         <td><span th:text="${product.name}">  </span></td>
         <td><span th:text="${product.nominalCalories}">  </span></td>
         <td><span th:text="${product.factualCalories}">  </span></td>
-        <td><span th:text="${product.protein}">  </span></td>
-        <td><span th:text="${product.fat}">  </span></td>
-        <td><span th:text="${product.carbonhydrates}">  </span></td>
+        <td><span th:text="${product.factualProtein}">  </span></td>
+        <td><span th:text="${product.factualFat}">  </span></td>
+        <td><span th:text="${product.factualCarbonhydrates}">  </span></td>
     </tr>
     <tbody class="labels">
     <tr>
