--- a/src/main/resources/templates/products/getProducts.html
+++ b/src/main/resources/templates/products/getProducts.html
@@ -159,7 +159,7 @@
             <tbody>
             <tr th:each="product : ${products}">
                 <td><span th:text="${product.name}">  </span></td>
-                <td><span th:text="${product.calories}">  </span></td>
+                <td><span th:text="${product.nominalCalories}">  </span></td>
                 <td><span th:text="${product.protein}">  </span></td>
                 <td><span th:text="${product.fat}">  </span></td>
                 <td><span th:text="${product.carbonhydrates}">  </span></td>
